--- a/index.html
+++ b/index.html
@@ -247,13 +247,14 @@ html, body {
 	width: -webkit-calc(100vw - 16px);
 	width: -moz-calc(100vw - 16px);
 	width: calc(100vw - 16px);
-	min-height: 100%;
+
 }
 body {
 	background-image: url("https://drive.google.com/uc?id=11HVJRZkdeSC1acpJN7h9YEt66mxSjIiV");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: center;
+  	background-size:cover;
 }
 /*
 A linear gradient of color
