--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <title>府城奇聞錄老古石篇v1</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="google-site-verification" content="hBuROPi3MacdibffQVZ5Aty4Al6HYvWOIXPR5e2NUhg" />
 <!--
 
 SugarCube (v2.31.1): A free (gratis and libre) story format.
