--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-init="no-js">
 <head>
 <meta charset="UTF-8" />
-<title>府城奇聞錄老古石篇v1</title>
+<title>府城奇聞錄</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="google-site-verification" content="hBuROPi3MacdibffQVZ5Aty4Al6HYvWOIXPR5e2NUhg" />
 <!--
