--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>府城奇聞錄</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="google-site-verification" content="hBuROPi3MacdibffQVZ5Aty4Al6HYvWOIXPR5e2NUhg" />
+<meta name="google-site-verification" content="5py8HE93N0D9zAzEXgjfqqoKsvtQg4HS-JD9r9Taj3M" />
 <!--
 
 SugarCube (v2.31.1): A free (gratis and libre) story format.
