--- a/index.html
+++ b/index.html
@@ -1318,7 +1318,8 @@ window.hashStr = function(txt) {
 @@.center;
 &lt;img src=&quot;https://drive.google.com/uc?id=16CJnw1MSW_unRoBRYw8tJaLIXXLrBI5-&quot; width=&quot;65%&quot;&gt;@@
 [[開始遊戲|第一章0]]
-&lt;/table&gt;</tw-passagedata><tw-passagedata pid="88" name="第一章0" tags="autosave noheader" position="1125,500" size="100,100">&lt;&lt;set $title1 to 1&gt;&gt;
+&lt;/table&gt;
+&lt;&lt;run localStorage.clear()&gt;&gt;</tw-passagedata><tw-passagedata pid="88" name="第一章0" tags="autosave noheader" position="1125,500" size="100,100">&lt;&lt;set $title1 to 1&gt;&gt;
 @@.center;&lt;h1&gt;第一章&lt;/h1&gt;
 &lt;img src=&quot;https://drive.google.com/uc?id=10h9j1er7LNtNZeH-aqKUnie0zA3W9-gS&quot; width=&quot;100%&quot;&gt;@@
 
@@ -2324,7 +2325,7 @@ window.hashStr = function(txt) {
 看來號碼不對，是哪裡搞錯了呢？
 &lt;&lt;timed 2s&gt;&gt;&lt;&lt;goto &quot;第五關關卡1&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="153" name="start" tags="no-side-bar start" position="600,300" size="200,100">
 
-&lt;&lt;run localStorage.clear()&gt;&gt;
+
 @@.center;
 &lt;img src=&quot;https://drive.google.com/uc?id=14_bGCjdkgHaYjjb5C5uMXcbyKKaZZBv1&quot; width=&quot;80%&quot;&gt;
 
