--- a/index.html
+++ b/index.html
@@ -1992,7 +1992,7 @@ window.hashStr = function(txt) {
 @@.center;
 &lt;img src=&quot;https://drive.google.com/uc?id=1zKfTS-MM9hAmt3bhfxxcs0EW90_Cozf2&quot; width=&quot;100%&quot;&gt;
 @@
-
+&lt;&lt;drop &#39;$inv&#39; &#39;法器：虎牌&#39;&gt;&gt;&lt;&lt;drop &#39;$inv&#39; &#39;法器：黑色羽扇&#39;&gt;&gt;&lt;&lt;drop &#39;$inv&#39; &#39;法器：賞善罰惡帽&#39;&gt;&gt;
 &lt;div class=&quot;say&quot;&gt;
 &lt;img src=&quot;https://drive.google.com/uc?id=1f4jfw4y-7WBnhggxV9mDt-7FhNVNUgg_&quot; width=&quot;15%&quot;&gt;
 &lt;p&gt;小凡&lt;/p&gt;
@@ -2124,7 +2124,7 @@ window.hashStr = function(txt) {
 
 [[小凡趕緊撿起三樣法器|第四關4]]
 &lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="136" name="第四關4" tags="" position="1500,875" size="100,100">小凡撿起@@color:Aquamarine;三樣法器@@，忽然法器與小凡發生共鳴，一道光束發出，刺眼到令人張不開眼睛，無支祁趕緊趁亂逃走，幾分鐘後，光束消失。
-
+&lt;&lt;pickup &#39;$inv&#39; &#39;法器：虎牌&#39;&gt;&gt;&lt;&lt;pickup &#39;$inv&#39; &#39;法器：黑色羽扇&#39;&gt;&gt;&lt;&lt;pickup &#39;$inv&#39; &#39;法器：賞善罰惡帽&#39;&gt;&gt;
 小凡和子寧相互對視，[[想知道上一次的儀式發生了什麼事？|第五章0]]</tw-passagedata><tw-passagedata pid="137" name="第五關2" tags="" position="1625,750" size="100,100">奶奶執行了儀式，她似乎有某種未知的力量，結合三樣法器，封印了無支祁，奶奶和法器也隨之消失。
 
 &lt;div class=&quot;say&quot;&gt;
@@ -2175,7 +2175,7 @@ window.hashStr = function(txt) {
 &lt;img src=&quot;https://drive.google.com/uc?id=1BLnzDWb9OWYouPtQHhzd99nWJhVu4T98&quot; width=&quot;80%&quot;&gt;
 @@
 [[巨大的八爺降臨了……|第五關4.5]]
-&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="140" name="第五關關卡1" tags="" position="1625,1250" size="100,100">@@.center;
+&lt;&lt;drop &#39;$inv&#39; &#39;法器：虎牌&#39;&gt;&gt;&lt;&lt;drop &#39;$inv&#39; &#39;法器：黑色羽扇&#39;&gt;&gt;&lt;&lt;drop &#39;$inv&#39; &#39;法器：賞善罰惡帽&#39;&gt;&gt;&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="140" name="第五關關卡1" tags="" position="1625,1250" size="100,100">@@.center;
 &lt;h3&gt;最後的訊息&lt;/h3&gt;
 @@
 原來臉譜下方是八爺的名片，請參考名片上的提示，請去觀察日記碎片上出現的數字，利用找出來的數字，就能找出八爺的電話號碼，控制八爺。
