--- a/index.html
+++ b/index.html
@@ -1299,7 +1299,7 @@ window.hashStr = function(txt) {
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;if $title5 is 1&gt;&gt;
 [[第五章|第五章0]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="83" name="背包" tags="noreturn" position="500,800" size="100,100">&lt;&lt;inventory &#39;$inv&#39; &#39;,&#39;&gt;&gt;
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="83" name="背包" tags="noreturn" position="500,800" size="100,100">&lt;&lt;if $rit is 2&gt;&gt;你的背包是空的&lt;&lt;else&gt;&gt;&lt;&lt;inventory &#39;$inv&#39; &#39;,&#39;&gt;&gt;
 
 [[返回前頁|$return]]</tw-passagedata><tw-passagedata pid="84" name="StoryInit" tags="noreturn" position="700,900" size="100,100">/* 設置物品變數 */
 &lt;&lt;newinventory &#39;$inv&#39;&gt;&gt;
