--- a/index.html
+++ b/index.html
@@ -2048,7 +2048,7 @@ window.hashStr = function(txt) {
 &lt;/div&gt;
 
 小凡勉強站起身，痛苦地望著消失的無支祁和子寧，現在，[[他必須將法器搶回來。|第四章0]]
-&lt;&lt;/linkappend&gt;&gt;&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="131" name="StoryInterface" tags="noreturn" position="700,1000" size="100,100"></tw-passagedata><tw-passagedata pid="132" name="妖氣儀9" tags="noreturn" position="2100,600" size="100,100">&lt;img src=&quot;https://drive.google.com/uc?id=1Hb1zkUAqSg0SbqZrEFlQLUkJ8_yaSztK&quot; width=&quot;80%&quot; &gt;
+&lt;&lt;/linkappend&gt;&gt;&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="131" name="StoryInterface" tags="noreturn" position="700,1000" size="100,100"></tw-passagedata><tw-passagedata pid="132" name="妖氣儀9" tags="noreturn" position="2100,600" size="100,100">&lt;img src=&quot;img/detect.gif&quot; width=&quot;80%&quot; &gt;
 </tw-passagedata><tw-passagedata pid="133" name="第四關關卡提示1" tags="" position="3025,600" size="100,100">妖氣代表子寧現在的方位，請看著妖氣儀的動態圖，依據出子寧移動的規律，來預判子寧下一個移動的地點。
 
 假設玩家在甕城角，子寧已經移動頂合源角，玩家必須預判子寧下一步移動的方位，選擇合發角的位置，才能追上子寧。</tw-passagedata><tw-passagedata pid="134" name="第四關2" tags="autosave" position="1500,625" size="100,100">在妖氣儀的指引下，小凡終於找到子寧和無支祁，不過他們似乎發生爭執，只見子寧將@@color:Aquamarine;三樣法器@@對準@@color:Aquamarine;無支祁@@……
@@ -2181,7 +2181,7 @@ window.hashStr = function(txt) {
 &lt;h3&gt;最後的訊息&lt;/h3&gt;
 @@
 原來臉譜下方是八爺的名片，請參考名片上的提示，請去觀察日記碎片上出現的數字，利用找出來的數字，就能找出八爺的電話號碼，控制八爺。
-&lt;img src=&quot;https://drive.google.com/uc?id=1oBKIP4Vn8iSETjtfSi6pTYv8xMtEyEyM&quot; width=&quot;100%&quot;&gt;
+&lt;img src=&quot;img/card.png&quot; width=&quot;100%&quot;&gt;
 
 &lt;&lt;set $answer to &#39;&#39;&gt;&gt;\
   輸入電話號碼：&lt;&lt;textbox &#39;$answer&#39; &#39;09&#39; autofocus&gt;&gt;
@@ -2286,17 +2286,17 @@ window.hashStr = function(txt) {
 結束之前，別忘了享受[[當地美食|https://www.google.com/maps/d/u/0/embed?mid=1kWwYb3_KKCHs1HG5WtWTJ04tSSQAU0m7]]再回去喔～</tw-passagedata><tw-passagedata pid="146" name="branch1" tags="branch no-side-bar noreturn noheader- nofooter" position="100,900" size="100,100">&lt;&lt;pickup &#39;$inv&#39; &#39;法器：虎牌&#39;&gt;&gt;
 &lt;div align=&#39;center&#39;&gt;\
 你找到了虎牌！
-&lt;img src=&quot;https://drive.google.com/uc?id=1-ZsVLubXi84QZH1pmd5Ly9bAy9xAwVd8&quot; width=&quot;50%&quot; &gt;
+&lt;img src=&quot;img/brand.png&quot; width=&quot;50%&quot; &gt;
 (閱讀完後請關掉此分頁，回到遊戲頁面)
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="147" name="branch2" tags="branch no-side-bar noreturn noheader- nofooter" position="200,900" size="100,100">&lt;&lt;pickup &#39;$inv&#39; &#39;法器：黑色羽扇&#39;&gt;&gt;
 &lt;div align=&#39;center&#39;&gt;\
 你找到了黑色羽扇！
-&lt;img src=&quot;https://drive.google.com/uc?id=1MirovGMqQB8zxd9hdnKLydGUrJ9BwFIW&quot; width=&quot;50%&quot; &gt;
+&lt;img src=&quot;img/fan.png&quot; width=&quot;50%&quot; &gt;
 (閱讀完後請關掉此分頁，回到遊戲頁面)
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="148" name="branch3" tags="branch no-side-bar noreturn noheader- nofooter" position="300,900" size="100,100">&lt;&lt;pickup &#39;$inv&#39; &#39;法器：賞善罰惡帽&#39;&gt;&gt;
 &lt;div align=&#39;center&#39;&gt;\
 你找到了賞善罰惡帽！
-&lt;img src=&quot;https://drive.google.com/uc?id=13NL-25qKnNdaWvk7sJxDfYOL3H2hY6eb&quot; width=&quot;50%&quot; &gt;
+&lt;img src=&quot;img/hat.png&quot; width=&quot;50%&quot; &gt;
 (閱讀完後請關掉此分頁，回到遊戲頁面)
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="149" name="nobranch" tags="branch no-side-bar noreturn noheader- nofooter" position="100,1000" size="100,100">&lt;div align=&#39;center&#39;&gt;\
 沒有找到法器，看來找錯地方了……
