--- a/index.html
+++ b/index.html
@@ -1380,7 +1380,8 @@ window.hashStr = function(txt) {
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if tags().includes(&#39;error&#39;)&gt;&gt;&lt;u&gt;@@color:Orange;錯字更正：實體道具「女戒字謎卡」，第一行的倒數第二個字「者」為錯字，應改為「旨」。
-[[正確的女戒字謎卡圖檔|https://drive.google.com/file/d/15i3MlLi-QU7P-PTtFNn1WqtSJY4GK8BM/view?usp=sharing]]@@&lt;/u&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="87" name="開場" tags="" position="1000,500" size="100,100">@@.center;&lt;h2&gt;府城奇聞錄（老古石街篇）&lt;/h2&gt;@@
+[[正確的女戒字謎卡圖檔|https://drive.google.com/file/d/15i3MlLi-QU7P-PTtFNn1WqtSJY4GK8BM/view?usp=sharing]]
+道歉啟事：由於場地整修，代天府門上的春聯遭暫時移除，請改參考[[門聯照片|https://drive.google.com/file/d/1Pp5iKdYYxFr3PEc1bszYe1-ufs3wKbXB/view?usp=sharing]]解謎。@@&lt;/u&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="87" name="開場" tags="" position="1000,500" size="100,100">@@.center;&lt;h2&gt;府城奇聞錄（老古石街篇）&lt;/h2&gt;@@
 &lt;table&gt;
 少年小凡，跟隨爸爸整理老屋時，發現失蹤許久的奶奶的日記，小凡閱讀日記的過程中，發覺奶奶的失蹤並不單純，於是，小凡重回奶奶曾經旅遊的歷史街區，找尋奶奶失蹤的真相。
 @@.center;
