--- a/old/府城奇聞錄1/openpage.html
+++ b/old/府城奇聞錄1/openpage.html
@@ -527,6 +527,32 @@ $(document).on(':passageend', function () { hashChanged(); });
 !function(){l10nStrings.identity="遊戲",l10nStrings.aborting="終止",l10nStrings.cancel="取消",l10nStrings.close="關閉",l10nStrings.ok="確認",l10nStrings.errorTitle="錯誤",l10nStrings.errorNonexistentPassage='段落"{passage}"不存在',l10nStrings.errorSaveMissingData="存檔缺少必須的數據，可能被讀取的文件不是存檔或存檔被損壞",l10nStrings.errorSaveIdMismatch="保存{identity}是錯誤的",l10nStrings._warningIntroLacking="你的瀏覽器可能損壞或者被禁用",l10nStrings._warningOutroDegraded="，所以{identity}在受限模式中運行。你可以繼續運行，但是一些內容可能不能正確工作。",l10nStrings.warningNoWebStorage="{_warningIntroLacking} Web Storage API {_warningOutroDegraded}",l10nStrings.warningDegraded="{_warningIntroLacking} {identity}需要的功能 {_warningOutroDegraded}",l10nStrings.debugViewTitle="調適模式",l10nStrings.debugViewToggle="切換調適模式",l10nStrings.uiBarToggle="打開/關閉導航欄",l10nStrings.uiBarBackward="後退",l10nStrings.uiBarForward="前進",l10nStrings.uiBarJumpto="跳到{identity}的歷史紀錄中的某一點",l10nStrings.jumptoTitle="跳到",l10nStrings.jumptoTurn="轉到",l10nStrings.jumptoUnavailable="目前沒有跳躍點…",l10nStrings.savesTitle="存檔",l10nStrings.savesDisallowed="在這個段落中不允許存檔",l10nStrings.savesEmptySlot="— 插槽空 —",l10nStrings.savesIncapable="{_warningIntroLacking}支持存檔所需的功能，因此本次遊戲的存檔功能已被禁用",l10nStrings.savesLabelAuto="自動存檔",l10nStrings.savesLabelDelete="刪除",l10nStrings.savesLabelExport="另存為……",l10nStrings.savesLabelImport="讀取……",l10nStrings.savesLabelLoad="讀取",l10nStrings.savesLabelClear="全部刪除",l10nStrings.savesLabelSave="保存",l10nStrings.savesLabelSlot="插槽",l10nStrings.savesSavedOn="保存在：",l10nStrings.savesUnavailable="未找到存檔插槽…",l10nStrings.savesUnknownDate="未知",l10nStrings.settingsTitle="設置",l10nStrings.settingsOff="關閉",l10nStrings.settingsOn="開啟",l10nStrings.settingsReset="重置為默認值",l10nStrings.restartTitle="重新開始",l10nStrings.restartPrompt="你確定要重新開始嗎？未保存的進度將會丟失。",l10nStrings.shareTitle="分享",l10nStrings.autoloadTitle="自動保存",l10nStrings.autoloadCancel="前往最初的段落",l10nStrings.autoloadOk="讀取自動存檔",l10nStrings.autoloadPrompt="有一個自動存檔，讀取它還是前往最初的段落？",l10nStrings.macroBackText="返回",l10nStrings.macroReturnText="返回"}();
 /* 介面中文化結束 */
 
+/* Google Analytics */
+var lockID = LoadScreen.lock(); // Lock loading screen
+importScripts('https://www.googletagmanager.com/gtag/js?id=G-ZBBY2930DD')
+	.then(function () {
+		window.dataLayer = window.dataLayer || [];
+		window.gtag = function () {
+			dataLayer.push(arguments);
+		};
+		gtag('js', new Date());
+		gtag('config', 'G-ZBBY2930DD');
+		$(document).on('click', 'a[data-passage]', function () {
+			gtag('event', 'Navigation', {
+				event_label    : $(this).attr('data-passage'),
+				event_category : 'GuestClick'
+			});
+		});
+		if (State.size > 0) {
+			Engine.show();
+		}
+		LoadScreen.unlock(lockID); // Unlock loading screen
+	})
+	.catch(function (error) {
+		console.warn('Could not load "gtag" library.');
+		LoadScreen.unlock(lockID); // Unlock loading screen
+	});
+
 /* hovertip v2.0 - Start */
 window.UpdateHoverTipTxt = function (container) {
 	if (Engine.isIdle()) {
@@ -2031,7 +2057,7 @@ window.hashStr = function(txt) {
 </tw-passagedata><tw-passagedata pid="128" name="第三關關卡1線索3" tags="" position="1375,100" size="100,100">----
 真的要看答案嗎？不再思考一下？
 &lt;&lt;linkreplace &quot;對我要看答案&quot;&gt;&gt;
-三個道具的位置在地圖上標示「廢棄電桿」、「勵園門柱」、「崇福宮」之處，請到這三個地方掃描QRcode便可通關。
+三個道具的位置在地圖上標示「廢棄電塔」、「崇福宮」、「崇福宮」之處，請到這三個地方掃描QRcode便可通關。
 &lt;img src=&quot;img/answer.jpg&quot; width=&quot;100%&quot;&gt;
 &lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="129" name="第三關3" tags="" position="1375,1000" size="100,100">@@.center;
 &lt;img src=&quot;https://drive.google.com/uc?id=10BSE8XSKBKxpNGn6C-v_omNKf_vH8Tgp&quot; width=&quot;100%&quot;&gt;
