--- a/old/府城奇聞錄1/closepage.html
+++ b/old/府城奇聞錄1/closepage.html
@@ -34,6 +34,15 @@ ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZBBY2930DD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZBBY2930DD');
+</script>
 <script id="script-libraries" type="text/javascript">
 if(document.head&&document.addEventListener&&document.querySelector&&Object.create&&Object.freeze&&JSON){document.documentElement.setAttribute("data-init", "loading");
 /*! @source http://purl.eligrey.com/github/classList.js/blob/master/classList.js */
@@ -2022,7 +2031,7 @@ window.hashStr = function(txt) {
 </tw-passagedata><tw-passagedata pid="128" name="第三關關卡1線索3" tags="" position="1375,100" size="100,100">----
 真的要看答案嗎？不再思考一下？
 &lt;&lt;linkreplace &quot;對我要看答案&quot;&gt;&gt;
-三個道具的位置在地圖上標示「廢棄電桿」、「勵園門柱」、「崇福宮」之處，請到這三個地方掃描QRcode便可通關。
+三個道具的位置在地圖上標示「集福宮」、「廢棄電塔」、「崇福宮」之處，請到這三個地方掃描QRcode便可通關。
 &lt;img src=&quot;img/answer.jpg&quot; width=&quot;100%&quot;&gt;
 &lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="129" name="第三關3" tags="" position="1375,1000" size="100,100">@@.center;
 &lt;img src=&quot;https://drive.google.com/uc?id=10BSE8XSKBKxpNGn6C-v_omNKf_vH8Tgp&quot; width=&quot;100%&quot;&gt;
@@ -2353,7 +2362,7 @@ window.hashStr = function(txt) {
 (閱讀完後請關掉此分頁，回到遊戲頁面)
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="147" name="branch2" tags="branch no-side-bar noreturn nofooter" position="200,900" size="100,100">&lt;&lt;pickup &#39;$inv&#39; &#39;法器：黑色羽扇&#39;&gt;&gt;
 &lt;div align=&#39;center&#39;&gt;\
-你找到了黑色羽扇！
+你找到了羽扇！
 &lt;img src=&quot;img/fan.png&quot; width=&quot;50%&quot; &gt;
 (閱讀完後請關掉此分頁，回到遊戲頁面)
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="148" name="branch3" tags="branch no-side-bar noreturn nofooter" position="300,900" size="100,100">&lt;&lt;pickup &#39;$inv&#39; &#39;法器：賞善罰惡帽&#39;&gt;&gt;
