--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ var saveAs=saveAs||navigator.msSaveBlob&&navigator.msSaveBlob.bind(navigator)||f
 		<div id="init-lacking">Your browser lacks required capabilities. Please upgrade it or switch to another to continue.</div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="府城奇聞錄" startnode="169" creator="Twine" creator-version="2.3.9" ifid="8F043437-C010-4FC5-A327-46809AD56E94" zoom="1" format="SugarCube" format-version="2.31.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/*提醒視窗*/
+	<tw-storydata name="府城奇聞錄" startnode="153" creator="Twine" creator-version="2.3.9" ifid="8F043437-C010-4FC5-A327-46809AD56E94" zoom="1" format="SugarCube" format-version="2.31.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/*提醒視窗*/
 /*
     notify.min.css, by chapel; for use with notify.js
     version 1.0.0
@@ -526,6 +526,32 @@ $(document).on(':passageend', function () { hashChanged(); });
 /* 介面中文化開始 */
 !function(){l10nStrings.identity="遊戲",l10nStrings.aborting="終止",l10nStrings.cancel="取消",l10nStrings.close="關閉",l10nStrings.ok="確認",l10nStrings.errorTitle="錯誤",l10nStrings.errorNonexistentPassage='段落"{passage}"不存在',l10nStrings.errorSaveMissingData="存檔缺少必須的數據，可能被讀取的文件不是存檔或存檔被損壞",l10nStrings.errorSaveIdMismatch="保存{identity}是錯誤的",l10nStrings._warningIntroLacking="你的瀏覽器可能損壞或者被禁用",l10nStrings._warningOutroDegraded="，所以{identity}在受限模式中運行。你可以繼續運行，但是一些內容可能不能正確工作。",l10nStrings.warningNoWebStorage="{_warningIntroLacking} Web Storage API {_warningOutroDegraded}",l10nStrings.warningDegraded="{_warningIntroLacking} {identity}需要的功能 {_warningOutroDegraded}",l10nStrings.debugViewTitle="調適模式",l10nStrings.debugViewToggle="切換調適模式",l10nStrings.uiBarToggle="打開/關閉導航欄",l10nStrings.uiBarBackward="後退",l10nStrings.uiBarForward="前進",l10nStrings.uiBarJumpto="跳到{identity}的歷史紀錄中的某一點",l10nStrings.jumptoTitle="跳到",l10nStrings.jumptoTurn="轉到",l10nStrings.jumptoUnavailable="目前沒有跳躍點…",l10nStrings.savesTitle="存檔",l10nStrings.savesDisallowed="在這個段落中不允許存檔",l10nStrings.savesEmptySlot="— 插槽空 —",l10nStrings.savesIncapable="{_warningIntroLacking}支持存檔所需的功能，因此本次遊戲的存檔功能已被禁用",l10nStrings.savesLabelAuto="自動存檔",l10nStrings.savesLabelDelete="刪除",l10nStrings.savesLabelExport="另存為……",l10nStrings.savesLabelImport="讀取……",l10nStrings.savesLabelLoad="讀取",l10nStrings.savesLabelClear="全部刪除",l10nStrings.savesLabelSave="保存",l10nStrings.savesLabelSlot="插槽",l10nStrings.savesSavedOn="保存在：",l10nStrings.savesUnavailable="未找到存檔插槽…",l10nStrings.savesUnknownDate="未知",l10nStrings.settingsTitle="設置",l10nStrings.settingsOff="關閉",l10nStrings.settingsOn="開啟",l10nStrings.settingsReset="重置為默認值",l10nStrings.restartTitle="重新開始",l10nStrings.restartPrompt="你確定要重新開始嗎？未保存的進度將會丟失。",l10nStrings.shareTitle="分享",l10nStrings.autoloadTitle="自動保存",l10nStrings.autoloadCancel="前往最初的段落",l10nStrings.autoloadOk="讀取自動存檔",l10nStrings.autoloadPrompt="有一個自動存檔，讀取它還是前往最初的段落？",l10nStrings.macroBackText="返回",l10nStrings.macroReturnText="返回"}();
 /* 介面中文化結束 */
+
+/* Google Analytics */
+var lockID = LoadScreen.lock(); // Lock loading screen
+importScripts('https://www.googletagmanager.com/gtag/js?id=G-ZBBY2930DD')
+	.then(function () {
+		window.dataLayer = window.dataLayer || [];
+		window.gtag = function () {
+			dataLayer.push(arguments);
+		};
+		gtag('js', new Date());
+		gtag('config', 'G-ZBBY2930DD');
+		$(document).on('click', 'a[data-passage]', function () {
+			gtag('event', 'Navigation', {
+				event_label    : $(this).attr('data-passage'),
+				event_category : 'GuestClick'
+			});
+		});
+		if (State.size > 0) {
+			Engine.show();
+		}
+		LoadScreen.unlock(lockID); // Unlock loading screen
+	})
+	.catch(function (error) {
+		console.warn('Could not load "gtag" library.');
+		LoadScreen.unlock(lockID); // Unlock loading screen
+	});
 
 /* hovertip v2.0 - Start */
 window.UpdateHoverTipTxt = function (container) {
@@ -1382,15 +1408,14 @@ window.hashStr = function(txt) {
 /*預載圖片*/
 &lt;&lt;preload &#39;img/bosshead.png&#39; &#39;img/brand.png&#39; &#39;img/card.png&#39; &#39;img/cathead.png&#39; &#39;img/detect1.jpg&#39; &#39;img/detect2.jpg&#39; &#39;img/detect3.jpg&#39; &#39;img/detect4.jpg&#39; &#39;img/detect5.jpg&#39; &#39;img/detect6.jpg&#39; &#39;img/detect7.jpg&#39; &#39;img/fan.png&#39; &#39;img/ghosthead.png&#39; &#39;img/godhead.png&#39; &#39;img/hat.png&#39; &#39;img/hsiaofanhead.png&#39; &#39;img/lichinghead.png&#39; &#39;img/zhininghead.png&#39; &#39;img/logo.png&#39;&gt;&gt;</tw-passagedata><tw-passagedata pid="85" name="PassageHeader" tags="noreturn" position="700,1200" size="100,100"></tw-passagedata><tw-passagedata pid="86" name="PassageFooter" tags="" position="700,1100" size="100,100">
 
-&lt;&lt;if tags().includes(&#39;QR&#39;)&gt;&gt;&lt;u&gt;@@color:Orange;錯字更正：實體道具「法器靈術圖」，法器位置應改為「L2-3、L3-3、L8-7」。@@&lt;/u&gt;
-&lt;u&gt;@@color:DarkSeaGreen;提醒：如果找不到QRCODE，可能是找錯地方囉！如果確定地點無誤，那麼也可以選擇手動輸入地點。@@
+&lt;&lt;if tags().includes(&#39;QR&#39;)&gt;&gt;&lt;u&gt;@@color:DarkSeaGreen;提醒：如果找不到QRCODE，可能是找錯地方囉！如果確定地點無誤，那麼也可以選擇手動輸入地點。@@
 &lt;/u&gt;	  
 &lt;&lt;include &#39;第三關手動&#39;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if tags().includes(&#39;error&#39;)&gt;&gt;&lt;u&gt;@@color:Orange;錯字更正：實體道具「女戒字謎卡」，第一行的倒數第二個字「者」為錯字，應改為「旨」。
-[[正確的女戒字謎卡圖檔|https://drive.google.com/file/d/15i3MlLi-QU7P-PTtFNn1WqtSJY4GK8BM/view?usp=sharing]]
-道歉啟事：由於場地整修，代天府門上的春聯遭暫時移除，請改參考[[門聯照片|https://drive.google.com/file/d/1Pp5iKdYYxFr3PEc1bszYe1-ufs3wKbXB/view?usp=sharing]]解謎。@@&lt;/u&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="87" name="開場" tags="" position="1000,500" size="100,100">@@.center;&lt;h2&gt;府城奇聞錄（老古石街篇）&lt;/h2&gt;@@
+&lt;&lt;if tags().includes(&#39;error&#39;)&gt;&gt;&lt;u&gt;@@color:Orange;道歉啟事：由於場地整修，代天府門上的春聯遭暫時移除，請參考下面的門聯照片解謎。@@&lt;/u&gt;
+&lt;img src=&quot;https://drive.google.com/uc?id=1Pp5iKdYYxFr3PEc1bszYe1-ufs3wKbXB&quot; width=&quot;100%&quot;&gt;
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="87" name="開場" tags="" position="1000,500" size="100,100">@@.center;&lt;h2&gt;府城奇聞錄（老古石街篇）&lt;/h2&gt;@@
 &lt;table&gt;
 少年小凡，跟隨爸爸整理老屋時，發現失蹤許久的奶奶的日記，小凡閱讀日記的過程中，發覺奶奶的失蹤並不單純，於是，小凡重回奶奶曾經旅遊的歷史街區，找尋奶奶失蹤的真相。
 @@.center;
